implemented jwt auth
